# jarvis_app

./: .gitignore  config.py  main.py  pyproject.toml
modules/: __init__.py
modules/brain/: brain.py
modules/ears/: ears.py
modules/memory/: memory.py
modules/mouth/: mouth.py
skills/: music.py  notes.py  registry.py  search.py  system.py  youtube.py
