[project]
name = "jarvis-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.10.0",
    "faster-whisper>=1.2.1",
    "ollama>=0.6.1",
    "pyaudio>=0.2.14",
    "speechrecognition>=3.14.5",
    "youtube-transcript-api>=1.2.4",
    "ytmusicapi>=1.11.5",
]
